--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   fl_chart: ^0.40.0
+  table_calendar: ^3.0.6
 
 dev_dependencies:
   flutter_test:
