--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.40.0
   table_calendar: ^3.0.6
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
